<resources>
    <string name="app_name">Tazkir</string>
    <string name="sabah_button">أذكار الصباح</string>
    <string name="massaa_button">أذكار المساء</string>
    <string name="sleep_button">أذكار النوم</string>
    <string name="wakeup_button">أذكار الاستيقاظ</string>
    <string name="aftarsalat_button">أذكار بعد الصلاه</string>
    <string name="hajj_button">الحج والعمرة</string>
    <string name="rabanna40_button">40 دعاء يبدأ بـ ربنا</string>
    <string name="missed_rakah_button">الرقعة الفائتة</string>
    <string name="roqia_button">الرقيه الشرعية</string>
    <string name="counter1">مرة واحدة</string>
    <string name="counter3">ثلاث مرات</string>
    <string name="counter33">33 مرة</string>
    <string name="counter100">100 مرة</string>
    <string name="sabah1">أَعُوذُ بِاللهِ مِنْ الشَّيْطَانِ الرَّجِيمِ
\nاللّهُ لاَ إِلَـهَ إِلاَّ هُوَ الْحَيُّ الْقَيُّومُ لاَ تَأْخُذُهُ سِنَةٌ وَلاَ نَوْمٌ لَّهُ مَا فِي السَّمَاوَاتِ وَمَا فِي الأَرْضِ مَن ذَا الَّذِي يَشْفَعُ عِنْدَهُ إِلاَّ بِإِذْنِهِ يَعْلَمُ مَا بَيْنَ أَيْدِيهِمْ وَمَا خَلْفَهُمْ وَلاَ يُحِيطُونَ بِشَيْءٍ مِّنْ عِلْمِهِ إِلاَّ بِمَا شَاء وَسِعَ كُرْسِيُّهُ السَّمَاوَاتِ وَالأَرْضَ وَلاَ يَؤُودُهُ حِفْظُهُمَا وَهُوَ الْعَلِيُّ الْعَظِيمُ. \n[آية الكرسى - البقرة 255].</string>
    <string name="sabah2">بِسـمِِ اللهِ الرَّحْمنِ الرَّحِيم
\nقُلْ هُوَ ٱللَّهُ أَحَدٌ، ٱللَّهُ ٱلصَّمَدُ، لَمْ يَلِدْ وَلَمْ يُولَدْ، وَلَمْ يَكُن لَّهُۥ كُفُوًا أَحَدٌۢ. </string>
    <string name="sleep1">
بِاسْمِكَ رَبِّي وَضَعْتُ جَنْبِي وَبِكَ أَرْفَعُهُ فَإِنْ أَمْسَكْتَ نَفْسِي فَارْحَمْهَا وَإِنْ أَرْسَلْتَهَا فَاحْفَظْهَا بِمَا تَحْفَظُ بِهِ عِبَادَكَ الصَّالِحِينَ.
    </string>
    <string name="sleep2">

اللَّهمَّ خَلَقْتَ نَفْسِي وَأَنْتَ تَوَفَّاهَا لَكَ مَمَاتُهَا وَمَحْيَاهَا إِنْ أَحْيَيْتَهَا فَاحْفَظْهَا وَإِنْ أَمَتَّهَا فَاغْفِرْ لَهَا. اللَّهمَّ إِنِّي أَسْأَلُكَ العَافِيَةَ.
        </string>
    <string name="sleep3">

اللَّهُمَّ قِنِي عَذَابَكَ يَوْمَ تَبْعَثُ عِبَادَكَ.
        </string>
    <string name="sleep4">

بِاسْـمِكَ اللَّهُمَّ أَمُوتُ وَأَحْيَا.
        </string>
    <string name="sleep5">

اَلْحَمْدُ لِلَّهِ الَّذِي أَطْعَمَنَا وَسَقَانَا وَكَفَانَا وَآوَانَا فَكَمْ مِمَّنْ لاَ كَافِيَ لَهُ وَلاَ مُئْوِيَ.
        </string>
    <string name="sleep6">

اللَّهُمَّ عَالِمَ الغَيْبِ والشَّهَادَةِ فَاطِرَ السَّموَاتِ والأرْضِ رَبَّ كُلِّ شَيءٍ ومَلِيْكَهُ أشْهَدُ أنْ لَا إلَهَ إلاَّ أنْتَ أعُوذُ بِكَ مِنْ شَرِّ نَفْسِي وَمِنْ شَرِّ الشَّيْطَانِ وَشِرْكِهِ.
        </string>
    <string name="sleep7">

اللَّهُمَّ أَسْلَمْتُ نَفْسِي إِلَيْكَ وَفَوَّضْتُ أَمْرِي إِلَيْكَ وَوَجَّهْتُ وَجْهِي إِلَيْكَ وَأَلْجَأْتُ ظَهْرِي إِلَيْكَ رَغْبَةً وَرَهْبَةً إِلَيْكَ لاَ مَلْجَأَ وَلاَ مَنْجَا مِنْكَ إِلاَّ إِلَيْكَ آمَنْتُ بِكِتَابِكَ الَّذِي أَنْزَلْتَ وَبِنَبِيِّكَ الَّذِي أَرْسَلْتَ.
        </string>
    <string name="sleep8">

ٱللَّهُ لَآ إِلَٰهَ إِلَّا هُوَ ٱلۡحَيُّ ٱلۡقَيُّومُۚ لَا تَأۡخُذُهُۥ سِنَةٞ وَلَا نَوۡمٞۚ لَّهُۥ مَا فِي ٱلسَّمَٰوَٰتِ وَمَا فِي ٱلۡأَرۡضِۗ مَن ذَا ٱلَّذِي يَشۡفَعُ عِندَهُۥٓ إِلَّا بِإِذۡنِهِۦۚ يَعۡلَمُ مَا بَيۡنَ أَيۡدِيهِمۡ وَمَا خَلۡفَهُمۡۖ وَلَا يُحِيطُونَ بِشَيۡءٖ مِّنۡ عِلۡمِهِۦٓ إِلَّا بِمَا شَآءَۚ وَسِعَ كُرۡسِيُّهُ ٱلسَّمَٰوَٰتِ وَٱلۡأَرۡضَۖ وَلَا يَـُٔودُهُۥ حِفۡظُهُمَاۚ وَهُوَ ٱلۡعَلِيُّ ٱلۡعَظِيمُ.
        </string>
    <string name="sleep9">

سُبْحَانَ اَللّٰہ (33 مرة) الۡحَمۡدُ لِلّٰہ (33 مرة) اَللّٰہُ اَکۡبَر (34 مرة).
        </string>
    <string name="sleep10">

[سُورَةُ الإِخۡلَاصِ]\n
قُلۡ هُوَ ٱللَّهُ أَحَدٌ\n
ٱللَّهُ ٱلصَّمَدُ\n
لَمۡ يَلِدۡ وَلَمۡ يُولَدۡ وَلَمۡ يَكُن لَّهُۥ كُفُوًا أَحَدُۢ\n

[سُورَةُ الفَلَقِ]\n
قُلۡ أَعُوذُ بِرَبِّ ٱلۡفَلَقِ مِن شَرِّ مَا خَلَقَ وَمِن شَرِّ غَاسِقٍ إِذَا وَقَبَ وَمِن شَرِّ ٱلنَّفَّٰثَٰتِ فِي ٱلۡعُقَدِ وَمِن شَرِّ حَاسِدٍ إِذَا حَسَدَ\n

[سُورَةُ النَّاسِ]\n
قُلۡ أَعُوذُ بِرَبِّ ٱلنَّاسِ مَلِكِ ٱلنَّاسِ إِلَٰهِ ٱلنَّاسِ مِن شَرِّ ٱلۡوَسۡوَاسِ ٱلۡخَنَّاسِ ٱلَّذِي يُوَسۡوِسُ فِي صُدُورِ ٱلنَّاسِ مِنَ ٱلۡجِنَّةِ وَٱلنَّاسِ .
        </string>
    <string name="sleep_en1">
In Your name my Lord, I lie down and in Your name I rise, so if You should take my soul then have mercy upon it, and if You should return my soul then protect it in the manner You do so with Your righteous servants..

        </string>
    <string name="sleep_en2">
O Allah, You have created my soul and it is for You to take it in death. Its death and its life are in Your Hand. If You cause it to live then protect it and if You cause it to die then forgive it. O Allah, I ask you to keep me safe and sound. .

        </string>
    <string name="sleep_en3">
O Allah, protect me from Your punishment on the day Your servants are resurrected..

        </string>
    <string name="sleep_en4">
In Your name O Allah, I live and die..

        </string>
    <string name="sleep_en5">
All praise is for Allah, Who fed us and gave us drink, and Who is sufficient for us and has sheltered us, for how many have none to suffice them or shelter them..

        </string>
    <string name="sleep_en6">
O Allah Knower of the Unseen and the Seen, Originator of the heavens and the earth, Lord of everything and its Possessor, I bear witness that there is none worthy of worship except You, I seek refuge from You from the evil of my soul and from the evil of Shaitan and his Shirk..

        </string>
    <string name="sleep_en7">
O Allah! I have surrendered myself over to you and have turned my face towards You, and leave all my affairs to You and depend on You and put my trust in You expecting Your reward and fearing Your punishment. There is neither fleeing from You nor refuge but with You. I believe in the Book (Qur’an) which You have revealed and in Your Prophet (Muhammad) whom You have sent..

        </string>
    <string name="sleep_en8">
Allah! There is none worthy of worship but He, the Ever Living, the One Who sustains and protects all that exists. Neither slumber nor sleep overtakes Him. To Him belongs whatever is in the heavens and whatever is on the earth. Who is he that can intercede with Him except with His Permission? He knows what happens to them in this world, and what will happen to them in the Hereafter. And they will never compass anything of His Knowledge except that which He wills. His Throne extends over the heavens and the earth, and He feels no fatigue in guarding and preserving them. And He is the Most High, the Most Great..

        </string>
    <string name="sleep_en9">
Glory be to Allah (33 times), Praise be to Allah (33 times), Allah is the greatest (34 times).

        </string>
    <string name="sleep_en10">
[Surah Al-Ikhlas]
        \nSay, He is Allah, [who is] One, Allah, the Eternal Refuge, He neither begets nor is born, Nor is there to Him any equivalent.
        \n[Surah Al-Falaq]
        \nSay, I seek refuge in the Lord of daybreak, From the evil of that which He created, And from the evil of darkness when it settles, And from the evil of the blowers in knots, And from the evil of an envier when he envies.
        \n[Surah An-Nas]
        \nSay, I seek refuge in the Lord of mankind, The Sovereign of mankind, The God of mankind, From the evil of the retreating whisperer, Who whispers [evil] into the breasts of mankind, From among the jinn and mankind..

        </string>
    <string name="Q1">كيف تقضي الركعة الفائتة؟</string>
    <string name="missed_rakah1">
عند تأخر المصلي عن بدء الصلاة، فإن ما يدركه من الصلاة مع الإمام هي أول صلاته والركعات التي يصليها بعد مفارقته للإمام هي آخر صلاته، وعليه، فإذا أدركَ الإمام في الركعة الثانية، فإنه يقوم بعد مفارقته إلى الركعة الثالثة بالنسبة له، ولا يجلس إلا في الركعة الأخيرة، وجلوسه مع الإمام في التشهد الأخير يكفيه، عن التشهد الأوسط، وإذا فاتته ثلاث ركعات في الصلاة الرباعية، فإنه يجلس للتشهد ثلاث مرات، وهكذا في جميع الصلوات يجعل ما أدركه أول صلاته، وما يصليه بعد مفارقة للإمام هو آخر صلاته، هذا هو الراجح.
    </string>
    <string name="Q2">كيفية قضاء الركعة الفائتة من الصلاة الرباعية</string>
    <string name="missed_rakah2">
عندما تفوت المسلم ركعة رباعية كالظهر والعصر والعشاء، وصلى مع الإمام باقي الركعات الثلاث وسلم الإمام من الركعة الأخيرة الرابعة، فيقوم هو ويصلي ركعة واحدة فقط مكملة للصلوات، يقرأ فيها سورة الفاتحة فقط؛ لأن ما أدركه هو أول الصلاة، وما يقضيه هو آخرها، فعندما يُسلم الإمام، يقوم فيقرأ الفاتحة ثم يركع ثم يرفع ثم يسجد سجدتين، ثم يقرأ التحيات بكمالها ثم يسلم، هذا الواجب عليه، أما عن جلوسه مع الإمام وقراءة التحيات فذلك ليس إجباريًا إنما يجلس للمتابعة، ولا يجب فيها قراءة التحيات، لكن في حال قرأها وصلى على الرسول صلى الله عليه وسلم، لا خلاف في ذلك ولا بأس عليه، أما التحيات الواجبة عليه فإنما تكون بعد أن يتم الركعة الفائتة، فإذا أتمها قرأ التحيات وصلى على الرسول صلى الله عليه وسلم ودعا ثم يسلم، هذا هو الواجب عليه.
    </string>
    <string name="Q3">كيفية قضاء الركعات الفائتة من صلاة المغرب</string>
    <string name="missed_rakah3">
عند تأخر المصلي عن صلاة المغرب يوجد له أحكام يجب عليه الالتزام بها لقضاء الركعات التي فاتته فمن أدرك الإمامَ قبل أن ينهي الركوع في الركعة النهائية من صلاة المغرب فقد أدرك الركعة الأولى من صلاته هو، فيصلي الركعة مع الإمام، وتعد له ركعة أولى، ويتبقى عليه ركعتان، وفي حال سلم الإمام قام المصلي وأتى بركعة وجلس للتشهد الأوسط، وهكذا يكون قد صلى الركعة الثانية، ثم يقوم ويصلي الركعة الثالثة، ويجلس ، ويسلم، والله أعلم
    </string>
    <string name="Qen1">How do you spend the missed rak\'ah? </string>
    <string name="missed_rakah_en1">
When the worshiper delays the start of the prayer, what he catches up with from the prayer with the imam is his first prayer, and the rak’ahs that he prays after leaving the imam is his last prayer, and accordingly, if he catches up with the imam in the second rak’ah, then he gets up after leaving him to the third rak’ah for him, and he only sits in the second rak’ah. The last rak’ah, and his sitting with the imam in the last tashahhud is sufficient for him, for the middle tashahhud, and if he misses three rak’ahs in the four-rak’ah prayer, he sits for the tashahhud three times, and so on in all prayers he makes what he catches up the first of his prayers, and what he prays after leaving the imam is the last of his prayers, this is it most correct
    </string>
    <string name="Qen2">How to make up for the missed rak\'ah of the quadruple prayer</string>
    <string name="missed_rakah_en2">

When a Muslim misses a four-rak’ah, such as the noon, afternoon, and evening prayers, and he prays with the imam the rest of the three rak’ahs, and the imam delivers from the fourth last rak’ah, then he gets up and prays only one rak’ah that complements the prayers, in which only Surah Al-Fatihah is recited; Because what he catches up with is the beginning of the prayer, and what he makes up is the last of it. When the imam says the salutations, he gets up and recites Al-Fatihah, then kneels, then rises, then prostrates two prostrations, then recites the greetings in their entirety and then gives the salutations. To follow up, and it is not obligatory to read the greetings, but if he reads it and prays for the Messenger, may God’s prayers and peace be upon him, there is no dispute about that and there is nothing wrong with him. He greeted and supplicated and then delivered, this is what he must do.
    </string>
    <string name="Qen3">How to spend the missed rak\'ahs of Maghrib prayer</string>
    <string name="missed_rakah_en3">
When a worshiper is late for the Maghrib prayer, there are provisions for him that he must abide by in order to make up for the rak’ahs that he missed. Whoever catches up with the imam before he finishes bowing in the final rak’ah of the Maghrib prayer, then he catches up with the first rak’ah of his own prayer. Two rak’ahs, and when the imam says the salaam, the worshiper stands up and performs a rak’ah and sits for the middle tashahhud. Thus, he has prayed the second rak’ah, then he gets up and prays the third rak’ah, then sits and gives the salutation, and God knows best

    </string>
</resources>