<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".missed_rakah"
    android:background="@color/bk_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/missed_rakah_button"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/main_brown"
        android:layout_marginTop="10dp"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q1"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/missed_rakah1"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Qen1"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="20dp"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/missed_rakah_en1"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="15dp"
            android:textSize="15sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="20dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q2"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/missed_rakah2"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Qen2"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="20dp"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/missed_rakah_en2"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="15dp"
            android:textSize="15sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="20dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q3"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/missed_rakah3"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Qen3"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="20dp"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/missed_rakah_en3"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="15dp"
            android:textSize="15sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="20dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>
</ScrollView>